Allow line-breaking labels inside tables, to avoid horizontal scrolling

--- a/files/css/custom.css
+++ b/files/css/custom.css
@@ -32,6 +32,11 @@ footer {
     }
 }
 
+table .label {
+    /* Allow line-breaking labels inside tables, to avoid horizontal scrolling */
+    white-space: normal;
+}
+
 .white-text {
     color: #ccc;
 }
